asm_tests/other_testfiles/invalid_files/error27.s
.name "MORO"
.comment "MORJESTA!"

sti r1, r2, :
